# ESP32-S3-MSToDo-Dash

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults  setup_server_ip.py
backend_test/: README.md  app.py  test_api.py
main/: CMakeLists.txt  Kconfig  idf_component.yml  lcd_driver.c  lcd_driver.h  lv_conf.h  lv_font_chinese_14.c  lvgl_driver.c  lvgl_driver.h  main.c  todo_client.c  todo_client.h  todo_ui.c  todo_ui.h  touch_cst328.c  touch_driver.c  touch_driver.h  wifi_manager.c  wifi_manager.h
main/Vernon_ST7789T/: Vernon_ST7789T.c  Vernon_ST7789T.h
